# lagom

./: .dmypy.json  .gitignore  .pycrunch-config.yaml  .readthedocs.yml  .scrutinizer.yml  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS_AND_THANKS.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  context_based.py  example.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  test.sh
.benchmarks/Linux-CPython-3.10-64bit/: 0001_baseline.json
.benchmarks/Linux-CPython-3.11-64bit/: 0001_baseline.json
.benchmarks/Linux-CPython-3.8-64bit/: 0001_baseline.json
.benchmarks/Linux-CPython-3.9-64bit/: 0001_baseline.json
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  build-wheels.yml  codeql-analysis.yml  main.yml
docs/: CREDITS_AND_THANKS.md  clean_up.md  comparison.md  conftest.py  cookbook.md  development_of_lagom.md  exceptions.md  experimental.md  explicit_definitions.md  framework_integrations.md  full_example.md  index.md  next_steps.md  requirements.txt  testing_with_lagom.md
lagom/: __init__.py  compilaton.py  composition.py  container.py  context_based.py  debug.py  decorators.py  definitions.py  environment.py  exceptions.py  functools.py  injection_context.py  interfaces.py  markers.py  updaters.py  version.py  wrapping.py
lagom/experimental/: __init__.py  container.py  context_based.py  definitions.py  environment.py  exceptions.py
lagom/experimental/integrations/: __init__.py  click.py  django.py  flask.py  (+1 more)
lagom/integrations/: __init__.py  django.py  fast_api.py  flask.py  starlette.py
lagom/util/: __init__.py  functional.py  logging.py  reflection.py
scripts/: coverage.sh  format.sh  mutate.sh  publish.sh  simple_timing.py
scripts/timing/: core_domain.py  time_magic.py  time_optimised.py  time_plain.py  time_without_lagom.py
test/: conftest.py  test_abstracts_and_replacements.py  test_complex_type.py  test_container_cloning.py  test_dep_definition_functions.py  test_error_handling.py  test_lambda_loaders.py  test_objects.py  test_overwritting.py  test_partial_async_functions.py  test_partial_functions.py  test_partial_functions_scoped_singletons.py  test_rich_typing.py  test_shorter_syntax.py  test_singleton.py
test/integrations/: test_fastapi.py  test_flask.py  test_starlette.py
test/util/: test_functional.py
tests/: conftest.py  examples.py  test_abstracts_and_replacements.py  test_async_definitions_can_be_used.py  test_complex_type.py  test_composition.py  test_container_clone_layering.py  test_container_cloning.py  test_container_dependency_listing.py  test_container_reflection_debug_helpers.py  test_container_updaters.py  test_context_based_executions.py  test_decorators.py  test_defaults_are_used_if_needed.py  test_dep_definition_functions.py  test_env_wrapper.py  test_error_handling.py  test_explicit_container.py  test_explicit_partial_functions.py  test_function_collections.py  test_injectable_marker.py  test_lambda_loaders.py  test_magic_partial_async_functions.py  test_magic_partial_classes.py  test_magic_partial_functions.py  test_magic_partial_functions_scoped_singletons.py  test_objects.py  test_objects_with_referential_loops.py  test_optionals_are_well_handled.py  test_overwritting.py  test_partial_async_functions.py  test_partial_classes.py  test_partial_functions.py  test_partial_functions_scoped_singletons.py  test_shorter_syntax.py  test_singleton.py  test_temporary_singletons.py  test_the_containers_can_be_extended.py  test_undefinied_dep_logging.py
tests/benchmarking/: core_domain.py  test_basic_benchmarks.py
tests/bug_fixes/: 159_test_alias_to_self_recursion_error.py  resources_for_189.py  test_189_lagom_functions_should_be_mockable.py  test_242_non_thread_safe_context_container.py  test_alias_to_constructor_skipped.py
tests/experimental/: conftest.py  test_async_context_based_executions.py  test_env_wrapper.py  test_explicit_container.py  test_function_injection.py
tests/integrations/: test_fastapi.py  test_fastapi_integration.py  test_flask.py  test_starlette.py
tests/util/: test_functional.py  test_reflection.py
(+7 files in other folders)
