[tool.black]
target_version = ['py36', 'py37', 'py38', 'py39']

[build-system]
requires = ["setuptools>=59.6.0", "wheel", "mypy==0.971"]
build-backend = "setuptools.build_meta"

[project]
name = "lagom"
description = "Lagom is a dependency injection container designed to give you 'just enough' help with building your dependencies."
readme = "README.md"
authors = [{ name = "Meadsteve", email = "steve@meadsteve.dev" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = []
requires-python = ">=3.7"
dynamic = ["version"]

[project.optional-dependencies]
env = ["pydantic >=1.0.0,<2.0.0"]

[project.urls]
Homepage = "https://lagom-di.readthedocs.io/"
Github = "https://github.com/meadsteve/lagom"
Issues = "https://github.com/meadsteve/lagom/issues"